<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentOne">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_fragment_one"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonOneBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back_one" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_on_frgament_one"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:src="@drawable/ic_launcher_background" />
</LinearLayout>
