<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentTwo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_fragment_two"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonTwoBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back_two" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_on_fragment_two"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:src="@drawable/ic_launcher_foreground" />

</LinearLayout>
